fixed color contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -69,7 +69,7 @@ nav ul {
 }
 
 h1, h2, h3{
-    background:#cc2936ff;
+    background:#ebbab9ff;
     font-family: var(--heading-font);
 }
 
